fix: Fix delivery date cards alignment on select delivery page.

--- a/store/src/styles/sections/select-menu.scss
+++ b/store/src/styles/sections/select-menu.scss
@@ -186,7 +186,7 @@
 
 .hern-select-menu__category-two {
    @extend .hern-select-menu__category;
-   top: 48px;
+   top: 46px;
 }
 
 /*Menu*/
